tests/ui/suggestions/impl-trait-missing-lifetime.stderr
error[E0106]: missing lifetime specifier
  --> $DIR/impl-trait-missing-lifetime.rs:9:54
   |
LL | fn g(mut x: impl Iterator<Item = &'_ ()>) -> Option<&'_ ()> { x.next() }
   |                                                      ^^ expected named lifetime parameter
   |
   = help: this function's return type contains a borrowed value, but there is no value for it to be borrowed from
help: consider using the `'static` lifetime
   |
LL | fn g(mut x: impl Iterator<Item = &'_ ()>) -> Option<&'static ()> { x.next() }
   |                                                      ~~~~~~~

error[E0106]: missing lifetime specifier
  --> $DIR/impl-trait-missing-lifetime.rs:16:60
   |
LL | async fn i(mut x: impl Iterator<Item = &'_ ()>) -> Option<&'_ ()> { x.next() }
   |                                                            ^^ expected named lifetime parameter
   |
   = help: this function's return type contains a borrowed value, but there is no value for it to be borrowed from
help: consider using the `'static` lifetime
   |
LL | async fn i(mut x: impl Iterator<Item = &'_ ()>) -> Option<&'static ()> { x.next() }
   |                                                            ~~~~~~~

error: lifetime may not live long enough
  --> $DIR/impl-trait-missing-lifetime.rs:16:69
   |
LL | async fn i(mut x: impl Iterator<Item = &'_ ()>) -> Option<&'_ ()> { x.next() }
   | -----------------------------------------------------------------   ^^^^^^^^ returning this value requires that `'1` must outlive `'static`
   | |
   | return type `impl Future<Output = Option<&'static ()>>` contains a lifetime `'1`

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0106`.
